terraform/ticketdesk-terraform/security_groups.tf
resource "aws_security_group" "alb_sg" {
    name        = "tkt-${var.owner_initials}-alb-sg"
    description = "Allow inbound HTTP to ALB"
    vpc_id      = aws_vpc.main.id

    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}

resource "aws_security_group" "ecs_sg" {
    name        = "tkt-${var.owner_initials}-ecs-sg"
    description = "Allow traffic ONLY from ALB SG"
    vpc_id      = aws_vpc.main.id

    ingress {
        from_port   = 8000
        to_port     = 8000
        protocol    = "tcp"
        security_groups = [aws_security_group.alb_sg.id]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
